# solutions

./: LICENSE  README.md
archive/: Pipfile
archive/device_reporting/: .env.example
archive/remove_old_recordings/: .env.example  README.md
device_reporting/: .env  README.md  generate_report.py  report.csv
examples/agent/: .gitignore  README.md  agent_config.env.example
examples/agent/recordings/: rosbag2_2025_09_15-00_42_20_0 (1).mcap
examples/embed/: README.md  index.html  package-lock.json  package.json
examples/embed/src/: index.ts
examples/ros1/: .env.example  .gitignore  Dockerfile  IMAGE_MARKER  README  docker-compose.yml  export-logs.sh
examples/ros1/guide_rosbridge/: Dockerfile  README  docker-compose.yml  index.html
examples/ros2/: Vagrantfile
examples/ros2/guide_ros2_service/: Dockerfile  docker-compose.yml
examples/ros2/guide_ros2_service/ros2_ws/src/srv_client_checks/: CMakeLists.txt  package.xml
examples/ros2/guide_ros2_service/ros2_ws/src/srv_client_checks/src/: diagnostics_node.cpp  motor_node.cpp
examples/sdk/python/: .gitignore  main.py  requirements.txt
examples/ws/proto/: ExampleMsg.proto  ExampleMsg_pb2.py  README  my_server.py  requirements.txt
extensions/foxglove-auth-extension/: README.md  start-test-infra.sh  stop-test-infra.sh
extensions/foxglove-auth-extension/callback-page/: callback.html  serve.js
extensions/foxglove-auth-extension/extension/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
remove_old_recordings/: .env  clear_old_records.py
s3-copy/: README.md  copy-s3-file.py
(+34 files in other folders)
